[gd_scene load_steps=4 format=3 uid="uid://svtdbpv3febx"]

[ext_resource type="Script" path="res://scripts/drop_off_tank.gd" id="1_0syjc"]
[ext_resource type="Texture2D" uid="uid://csb06nv0c3bc3" path="res://icon.svg" id="2_ey5pk"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_iwwoa"]
size = Vector2(147, 119)

[node name="drop_off_tank" type="Area2D"]
script = ExtResource("1_0syjc")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(2.5, 1.5)
shape = SubResource("RectangleShape2D_iwwoa")

[node name="Sprite2D" type="Sprite2D" parent="CollisionShape2D"]
texture = ExtResource("2_ey5pk")

[node name="Timer" type="Timer" parent="."]

[node name="allert" type="Sprite2D" parent="Timer"]

[node name="ProgressBar" type="ProgressBar" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(400, 0)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -114.0
offset_right = 200.0
offset_bottom = -87.0
grow_horizontal = 2
grow_vertical = 2
step = 1.0

[node name="minus_timer" type="Timer" parent="."]

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="minus_timer" to="." method="_on_minus_timer_timeout"]
